--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: url('./img-site/background.jpg') no-repeat center center fixed;
+  background: url('./img-site/background.png') no-repeat center center fixed;
   background-size: cover;
   color: #fff;
   line-height: 1.6;
